--- a/src/application/view/VentanaPrincipal.fxml
+++ b/src/application/view/VentanaPrincipal.fxml
@@ -1,17 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="VentanaPrincipalController">
+<BorderPane prefHeight="200.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.VentanaPrincipalController">
    <center>
-      <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <FlowPane alignment="CENTER" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="botonNuevoTest" layoutX="53.0" layoutY="57.0" mnemonicParsing="false" onAction="#handleNuevoTest" text="Comenzar Test" />
-            <Button layoutX="82.0" layoutY="100.0" mnemonicParsing="false" text="Info" />
+            <Button fx:id="botonNuevoTest" mnemonicParsing="false" onAction="#handleNuevoTest" text="Comenzar Test">
+               <FlowPane.margin>
+                  <Insets right="10.0" />
+               </FlowPane.margin>
+            </Button>
+            <Button mnemonicParsing="false" text="Información">
+               <FlowPane.margin>
+                  <Insets right="10.0" />
+               </FlowPane.margin>
+            </Button>
+            <Button mnemonicParsing="false" onAction="#handleSalir" text="Salir" />
          </children>
-      </Pane>
+      </FlowPane>
    </center>
 </BorderPane>
