--- a/src/application/view/TestPage.fxml
+++ b/src/application/view/TestPage.fxml
@@ -8,19 +8,20 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane minWidth="-Infinity" prefWidth="300.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.TestPageController">
+<BorderPane minWidth="-Infinity" prefWidth="300.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.testPageController">
    <center>
-      <Pane prefHeight="200.0" prefWidth="300.0" BorderPane.alignment="CENTER">
+      <FlowPane alignment="CENTER" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <Text fx:id="textoPreguntaTextField" layoutX="137.0" layoutY="62.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
-            <RadioButton fx:id="botonSi" layoutX="63.0" layoutY="83.0" mnemonicParsing="false" text="RadioButton" />
-            <Button layoutX="90.0" layoutY="160.0" mnemonicParsing="false" text="Continuar" />
-            <Text fx:id="numeroPreguntaTextField" layoutX="54.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pregunta X de NumeroDePreguntas" />
-            <RadioButton fx:id="botonNo" layoutX="63.0" layoutY="111.0" mnemonicParsing="false" text="RadioButton" />
+            <Pane prefHeight="200.0" prefWidth="300.0">
+               <children>
+                  <Text fx:id="textoPreguntaTextField" layoutX="137.0" layoutY="62.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
+                  <RadioButton fx:id="botonSi" layoutX="63.0" layoutY="83.0" mnemonicParsing="false" text="Si" />
+                  <Button fx:id="continuar" layoutX="90.0" layoutY="160.0" mnemonicParsing="false" text="Continuar" />
+                  <Text fx:id="numeroPreguntaTextField" layoutX="54.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pregunta X de NumeroDePreguntas" />
+                  <RadioButton fx:id="botonNo" layoutX="63.0" layoutY="111.0" mnemonicParsing="false" text="No" />
+               </children>
+            </Pane>
          </children>
-         <BorderPane.margin>
-            <Insets left="10.0" right="10.0" />
-         </BorderPane.margin>
-      </Pane>
+      </FlowPane>
    </center>
 </BorderPane>
