--- a/src/application/view/loadingBar.fxml
+++ b/src/application/view/loadingBar.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.*?>
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
@@ -7,9 +8,10 @@
 
 <BorderPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.progressController">
    <center>
-      <Pane prefHeight="40.0" prefWidth="400.0">
+      <Pane prefHeight="118.0" prefWidth="400.0">
          <children>
-            <ProgressBar fx:id="progress" layoutX="100.0" layoutY="9.0" prefWidth="200.0" progress="0.0" BorderPane.alignment="CENTER" />
+            <ProgressBar fx:id="progress" layoutX="100.0" layoutY="65.0" prefWidth="200.0" progress="0.0" BorderPane.alignment="CENTER" />
+            <JFXTextField alignment="CENTER" layoutX="116.0" layoutY="14.0" text="Genernado Informe" />
          </children>
       </Pane>
    </center>
