--- a/src/application/view/TestPage.fxml
+++ b/src/application/view/TestPage.fxml
@@ -12,18 +12,14 @@
 
 <BorderPane minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.testPageController">
    <center>
-      <FlowPane alignment="CENTER" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <AnchorPane BorderPane.alignment="CENTER">
          <children>
-            <Pane prefHeight="508.0" prefWidth="490.0">
-               <children>
-                  <Button fx:id="continuar" layoutX="185.0" layoutY="433.0" mnemonicParsing="false" text="Continuar" />
-                  <JFXTextArea fx:id="textArea" layoutX="-36.0" layoutY="61.0" prefHeight="247.0" prefWidth="562.0" />
-                  <JFXRadioButton fx:id="botonSi" layoutX="109.0" layoutY="334.0" style="-jfx-selected-color: #2de8ef;" text="Si" />
-                  <JFXRadioButton fx:id="botonNo" layoutX="109.0" layoutY="374.0" text="No" />
-                  <JFXTextField fx:id="numeroPreguntaTextField" alignment="CENTER" layoutX="143.0" layoutY="14.0" text="Pregunta" />
-               </children>
-            </Pane>
+            <JFXRadioButton fx:id="botonSi" layoutX="263.0" layoutY="361.0" style="-jfx-selected-color: #007dff;" text="Si" />
+            <JFXTextArea fx:id="textArea" layoutX="120.0" layoutY="74.0" prefHeight="247.0" prefWidth="562.0" />
+            <Button fx:id="continuar" layoutX="357.0" layoutY="494.0" mnemonicParsing="false" text="Continuar" />
+            <JFXRadioButton fx:id="botonNo" layoutX="263.0" layoutY="405.0" text="No" />
+            <JFXTextField fx:id="numeroPreguntaTextField" alignment="CENTER" layoutX="316.0" layoutY="14.0" text="Pregunta" />
          </children>
-      </FlowPane>
+      </AnchorPane>
    </center>
 </BorderPane>
