--- a/src/application/application.css
+++ b/src/application/application.css
@@ -6,9 +6,14 @@
         linear-gradient(white 0%, #f3f3f3 50%, #ececec 51%, #f2f2f2 100%);
     -fx-background-insets: 0 0 -1 0,0,1;
     -fx-background-radius: 5,5,4;
-    -fx-padding: 3 30 3 30;
     -fx-text-fill: #242d35;
-    -fx-font-size: 14px;
+    -fx-font-size: 15px;
+}
+
+.button:hover{
+	-fx-background-color: rgba(74, 244, 187,0.5);
+	-fx-scale-x: 1.1;
+	-fx-scale-y: 1.1;
 }
 
 .borderPane{
@@ -16,6 +21,7 @@
 		 rgba(46,119,192,0.08),
 		 linear-gradient(rgba(182,221,237,1) 0%, rgba(74,166,191,1) 74%, rgba(17,121,153,1) 96%, rgba(17,121,153,1) 100%);
 }
+
 
 /*rgba(182,221,237,1) 0%, rgba(74,166,191,1) 74%, rgba(17,121,153,1) 96%, rgba(17,121,153,1) 100%
  * 
